scribe-parser/src/parser/misc.rs
use std::sync::Arc;

use crate::parser::descent_parser::DescentParser;
use ir::ast::{
    Block, Generic, MatchArm, MutabilityState, NormalParam, Param, ParamPassingKind,
    ProvenanceAnnotation, ProvenancePathSegment, ProvenanceRoot, ThisParam, Type, TypeKind,
    Visibility,
};
use ir::errors::error::{DiagnosticError, ParseErrorKind};
use ir::tokens::TokenKind::LBracket;
use ir::tokens::{Cursor, TokenKind};
use zetaruntime::arena::GrowableAtomicBump;

impl<'a, 'bump> DescentParser<'a, 'bump>
where
    'bump: 'a,
{
    pub fn parse_generics(
        &mut self,
    ) -> Result<Option<&'bump [Generic<'a, 'bump>]>, DiagnosticError<'a>> {
        if self.cursor.peek() != TokenKind::Lt {
            return Ok(None);
        }
